--- a/src/calculator.css
+++ b/src/calculator.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "TTB";
+  src: url('./TickingTimebombBB_ital.ttf');
+}
+
 .row div {
   display: inline-block;
   padding: 9px;
@@ -9,6 +14,7 @@
 }
 
 .display {
+  font-family: TTB;
   width: 230px;
   padding: 3px 10px;
   background: #DDD;
